<?xml version="1.0" encoding="UTF-8"?>

<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>SeleniumTraning</groupId>
	<artifactId>Demo</artifactId>
	<version>0.0.1-SNAPSHOT</version>

	<name>Demo</name>
	<!-- FIXME change it to the project's website -->
	<url>http://www.example.com</url>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<maven.compiler.source>1.7</maven.compiler.source>
		<maven.compiler.target>1.7</maven.compiler.target>
	</properties>

	<dependencies>
		<dependency>
			<groupId>org.testng</groupId>
			<artifactId>testng</artifactId>
			<version>7.7.1</version>
			<scope>compile</scope>
		</dependency>
		<dependency>
			<groupId>org.seleniumhq.selenium</groupId>
			<artifactId>selenium-java</artifactId>
			<version>4.10.0</version>
		</dependency>

		<dependency>
			<groupId>com.aventstack</groupId>
			<artifactId>extentreports</artifactId>
			<version>5.0.8</version>
		</dependency>

		<dependency>
			<groupId>io.qameta.allure</groupId>
			<artifactId>allure-testng</artifactId>
			<version>2.22.1</version>
		</dependency>

		<dependency>
			<groupId>org.aspectj</groupId>
			<artifactId>aspectjweaver</artifactId>
			<version>1.9.9.1</version>
			<scope>runtime</scope>
		</dependency>


	</dependencies>

	
<build>
    <plugins>
        <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-surefire-plugin</artifactId>
            <version>2.20</version>
             
             <configuration>
					<reuseForks>false</reuseForks>
					<testFailureIgnore>true</testFailureIgnore>
					<useSystemClassLoader>false</useSystemClassLoader>
					<forkCount>3</forkCount>
					<!--<argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>-->
					<suiteXmlFiles>
						<suiteXmlFile>C:/Users/Niranjan/Documents/Java_Eclipse_Practice/Demo/Demo_TestNG.xmL</suiteXmlFile>
 
 					<!-- <suiteXmlFile> ${suiteXmlFiles} </suiteXmlFile> -->
 
					</suiteXmlFiles>

					 <!-- <argLine> -javaagent:"${settings.localRepository}/org/aspectj/aspectjweaver/${aspectj.version}/aspectjweaver-${aspectj.version}.jar" 
						</argLine> -->

				</configuration>
             
        </plugin>
    </plugins>
</build>

</project>